# SK2_panstwa_miasta

./: .gitignore  CMakeLists.txt
src/client_gui/: main.cpp  mainwindow.cpp  mainwindow.hpp
src/common/: protocol.hpp
src/server/: server.cpp
